# multisensor_fusion_localization_study

./: .gitignore  LICENSE  README.md
catkin_myspace/: start.sh
catkin_myspace/src/multisensor_localization/: CMakeLists.txt  head.hpp  package.xml
catkin_myspace/src/multisensor_localization/cmake/: g2o.cmake  geographicLib.cmake  glog.cmake  pcl.cmake  yamlcpp.cmake
catkin_myspace/src/multisensor_localization/config/: back_end.yaml  data_pretreat.yaml  front_end.yaml  rviz.rviz
catkin_myspace/src/multisensor_localization/config/front_end/: config.yaml
catkin_myspace/src/multisensor_localization/include/data_pretreat/: data_pretreat_flow.h  data_pretreat_flow.hpp
catkin_myspace/src/multisensor_localization/include/debug_tools/: debug_tools.hpp
catkin_myspace/src/multisensor_localization/include/front_end/: front_end.hpp  front_end_flow.hpp
catkin_myspace/src/multisensor_localization/include/publisher/: cloud_publisher.hpp  imu_publisher.hpp  key_frame_publisher.hpp  key_frames_publisher.hpp  odom_publisher.hpp  odometry_publisher.hpp  origin_publisher.hpp
catkin_myspace/src/multisensor_localization/include/sensor_data/: cloud_data.hpp  gnss_data.hpp  imu_data.hpp  key_frame.hpp  pose_data.hpp  velocity_data.hpp
catkin_myspace/src/multisensor_localization/include/subscriber/: cloud_subscriber.hpp  gnss_subscriber.hpp  imu_subscriber.hpp  odometry_subscriber.hpp  velocity_subscriber.hpp
catkin_myspace/src/multisensor_localization/include/tf_listener/: tf_listener.hpp
catkin_myspace/src/multisensor_localization/include/tools/: file_manager.h
catkin_myspace/src/multisensor_localization/launch/: test_frame.launch
catkin_myspace/src/multisensor_localization/log/: test_node.INFO  test_node.g.g.log.INFO.20220920-161827.13658  test_node.g.g.log.INFO.20220921-222445.10419  test_node.g.g.log.INFO.20220922-222451.31788  test_node.g.g.log.INFO.20220923-111835.8932  test_node.g.g.log.INFO.20220924-171436.2469  test_node.g.g.log.INFO.20220925-104915.5955  test_node.g.g.log.INFO.20220926-095539.3866  test_node.g.g.log.INFO.20220926-230143.17726  test_node.g.g.log.INFO.20220927-162851.19817
catkin_myspace/src/multisensor_localization/readme/: README.md  template.txt
catkin_myspace/src/multisensor_localization/record/: data_record.csv  sensor_information.csv
catkin_myspace/src/multisensor_localization/rviz/: test.rviz
catkin_myspace/src/multisensor_localization/src/: test_node.cpp
catkin_myspace/src/multisensor_localization/src/app/: back_end_node.cpp  data_preprocess_node.cpp  data_pretreat_node.cpp  front_end_node.cpp
catkin_myspace/src/multisensor_localization/src/data_pretreat/: data_pretreat_flow.cpp
catkin_myspace/src/multisensor_localization/src/debug_tools/: debug_tools.cpp
catkin_myspace/src/multisensor_localization/src/front_end/: front_end.cpp  front_end_flow.cpp
(+47 files in other folders)
